@@ -15,6 +15,7 @@ import javax.servlet.ServletException;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
+import java.util.Collections;
 import java.util.List;
 
 @Component
@@ -50,7 +51,7 @@ public class JwtTokenFilter extends OncePerRequestFilter {
                 authentication = new UsernamePasswordAuthenticationToken(
                 userDetails, null,
                 userDetails == null ?
-                        List.of() : userDetails.getAuthorities()
+                        Collections.emptyList() : userDetails.getAuthorities()
         );
 
         authentication.setDetails(
